k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox
  labels:
    app: hivebox
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: hivebox
